# OpenGLLastTime

./: .gitignore  CMakeLists.txt
notes/: learnopengl-入门-OpenGL.md  learnopengl-入门-你好三角形.md
res/: index.html
res/shaders/: vert.shader  vertex_shader.vert
shaders/: frag.shader  hud_frag.shader  hud_vert.shader
src/: callbacks.cpp  callbacks.hpp  context.cpp  context.hpp  main.cpp  process_input.cpp  process_input.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  texture_loader.cpp  texture_loader.hpp
